Send visibility(ies) to the server during file import. Make sure all are valid for user. Still need to integrate accepting more than one

--- a/lumify-web-war/src/main/webapp/less/util/popovers/fileImport.less
+++ b/lumify-web-war/src/main/webapp/less/util/popovers/fileImport.less
@@ -1,6 +1,8 @@
 
 .fileImportPopover {
 
+  min-width: 17em;
+
   h1, h2 {
     font-size: 85%;
     font-weight: normal;
@@ -30,7 +32,7 @@
   }
 
 
-  .visibility.single {
+  .single {
     display: none;
   }
   .individual-visibility {
@@ -41,7 +43,7 @@
   }
 
   &.collapseVisibility {
-    .visibility.single {
+    .single {
       display: block;
     }
     .individual-visibility {
