--- a/lumify-web-war/src/main/webapp/less/util/popovers/popovers.less
+++ b/lumify-web-war/src/main/webapp/less/util/popovers/popovers.less
@@ -20,6 +20,12 @@
       padding-right: 4px;
     }
 
+    .alert {
+      button { display: none; }
+      padding: 5px;
+      font-size: 85%;      
+    }
+
     .create-connection-form {
       min-width: 14em;
       span {
@@ -56,7 +62,8 @@
     }
 
   }
+
+  @import "fileImport";
 }
 
 
-@import "fileImport";
